tests/ui/endpoint/invalid_params_ty.stderr
error[E0277]: the trait bound `FooParams: OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `OpenapiType` is not implemented for `FooParams`
   |
   = help: the following other types implement trait `OpenapiType`:
             &'a T
             ()
             BTreeMap<K, V>
             BTreeSet<T>
             CStr
             CString
             HashMap<K, V, S>
             HashSet<T, S>
           and $N others
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     #[openapi_bound(Params: OpenapiType)]
   |                             ^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`

error[E0277]: the trait bound `FooParams: Clone` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `Clone` is not implemented for `FooParams`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                                               ^^^^^ required by this bound in `EndpointWithSchema::Params`
help: consider annotating `FooParams` with `#[derive(Clone)]`
   |
10 | #[derive(Clone)]
   |

error[E0277]: the trait bound `FooParams: StateData` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `StateData` is not implemented for `FooParams`
   |
   = help: the following other types implement trait `StateData`:
             AuthSource
             AuthStatus<T>
             Body
             CookieJar
             CorsConfig
             FilePathExtractor
             HeaderMap
             IdPlaceholder<ID>
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params` to implement `QueryStringExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`

error[E0277]: the trait bound `FooParams: StaticResponseExtender` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `StaticResponseExtender` is not implemented for `FooParams`
   |
   = help: the following other types implement trait `StaticResponseExtender`:
             FilePathExtractor
             IdPlaceholder<ID>
             NoopExtractor
             NoopPathExtractor
             NoopQueryStringExtractor
             NoopResponseExtender
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params` to implement `QueryStringExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`

error[E0277]: the trait bound `for<'de> FooParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `FooParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params` to implement `QueryStringExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`
